--- a/flo-kernel/init/Kconfig
+++ b/flo-kernel/init/Kconfig
@@ -716,6 +716,11 @@ config CGROUP_PERF
 
 	  Say N if unsure.
 
+menuconfig GRR
+	bool "GRR  scheduler"
+	help
+	  GRR scheduler - W4118 Operating Systems, Columbia University, CS Department
+
 menuconfig CGROUP_SCHED
 	bool "Group CPU scheduler"
 	default n
