--- a/flo-kernel/arch/arm/configs/flo_defconfig
+++ b/flo-kernel/arch/arm/configs/flo_defconfig
@@ -523,6 +523,7 @@ CONFIG_PRINTK_TIME=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_SCHED_DEBUG=y
 CONFIG_GRR=y
+CONFIG_GRR_GROUPS=y
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
