--- a/flo-kernel/init/Kconfig
+++ b/flo-kernel/init/Kconfig
@@ -721,6 +721,12 @@ menuconfig GRR
 	help
 	  GRR scheduler - W4118 Operating Systems, Columbia University, CS Department
 
+menuconfig GRR_GROUPS
+	bool "GRR GROUP scheduler"
+	help
+	  GRR GROUP scheduler - W4118 Operating Systems, Columbia University, CS Department
+
+
 menuconfig CGROUP_SCHED
 	bool "Group CPU scheduler"
 	default n
